front/src/common/components/input.module.css
/* INPUT COMPONENT */

.input,
.textarea {
  width: 100%;
  font-size: var(--font-size);
  border: 1px solid var(--gray-medium);
  background-color: var(--white);
  padding: 10px;
  font-weight: 500;
}

.textarea {
  font-size: var(--font-size);
  margin-bottom: 0;
}

.input:focus,
.textarea:focus {
  border-color: var(--blue-medium);
}

.input:hover,
.textarea:hover {
  color: var(--blue-medium);
  border-color: var(--blue-medium);
}

.input:read-only:not(:disabled),
.textarea:read-only:not(:disabled) {
  color: initial;
  border: none;
  border: 1px solid transparent;
  border-top-color: var(--gray-highlight);
  background-color: transparent;
}

.input:disabled,
.textarea:disabled {
  background-color: var(--gray-highlight);
  color: var(--gray-dark);
}

/* LABEL TEXT FIELD COMPONENT */

.labelWrapper {
  display: flex;
  flex-direction: column;
  position: relative;
  font-size: 0.93em;
  font-style: italic;
  margin-bottom: 12px;
  min-height: 66px;
}

.labelWrapper .labelText {
  display: flex;
  align-items: center;
  margin-left: 4px;
  color: var(--gray-dark);
  white-space: nowrap;
}

.labelWrapper .labelText :global(.icon) {
  margin-top: 2px;
  margin-left: 4px;
}

.labelWrapper .labelIcon {
  position: absolute;
  right: 10px;
  bottom: 10px;
  color: var(--gray-medium);
}

.disabledLabel {
  opacity: 0.5;
  pointer-events: none;
}

.labelTextArea,
.textarea {
  height: 144px;
  margin-top: 0;
}

.errorLabel .labelText,
.errorLabel:hover .labelText,
.errorLabel:focus .labelText {
  color: var(--red-dark);
}

.errorLabel input.input,
.errorLabel textarea.textarea {
  color: var(--red-dark);
  border-color: var(--red-dark);
}

.errorLabel .input:read-only:not(:disabled),
.errorLabel .textarea:read-only:not(:disabled) {
  color: var(--red-dark);
  border-top-color: var(--red-dark);
}

/* SEARCH INPUT COMPONENT */

.searchInputWrapper {
  display: flex;
  position: relative;
}

.searchInputWrapper:hover svg {
  stroke: var(--blue-medium);
}

.searchInput {
  border-radius: 45px;
  padding-left: 40px;
  padding-right: 16px;
}

.searchInputWrapper svg {
  position: absolute;
  left: 12px;
  align-self: center;
  pointer-events: none;
}

/* LABEL CHECKBOX COMPONENT */

.labelCheckbox {
  display: flex;
  align-items: center;
  font-size: var(--font-size);
  cursor: pointer;
  height: 66px;
  margin-top: 12px;
  flex-shrink: 0;
}

.labelCheckbox .checkbox {
  margin-right: 12px;
  cursor: pointer;
}

.inputPlaceholder {
  height: 91px;
  margin-top: 12px;
}

.checkbox {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 22px;
  height: 22px;
  border: 1px solid var(--gray-medium);
  background-color: var(--white);
  border-radius: 4px;
}

.checkbox:hover {
  border-color: var(--blue-medium);
}

.checkbox.checkboxDisabled {
  background-color: var(--gray-highlight);
}

.checkbox.checkboxDisabled :global(.icon) {
  color: var(--gray-dark);
}

.checkbox.checkboxReadOnly {
  pointer-events: none;
}

